# nexus/types/src/deployment.rs
@@ -30,6 +30,8 @@ use iddqd::id_ord_map::RefMut;
 use iddqd::id_upcast;
 use nexus_sled_agent_shared::inventory::HostPhase2DesiredContents;
 use nexus_sled_agent_shared::inventory::HostPhase2DesiredSlots;
+use nexus_sled_agent_shared::inventory::OmicronMeasurementSetDesiredContents;
+use nexus_sled_agent_shared::inventory::OmicronMeasurements;
 use nexus_sled_agent_shared::inventory::OmicronSledConfig;
 use nexus_sled_agent_shared::inventory::OmicronZoneConfig;
 use nexus_sled_agent_shared::inventory::OmicronZoneImageSource;
@@ -128,6 +130,7 @@ pub use planning_report::PlanningMgsUpdatesStepReport;
 pub use planning_report::PlanningMupdateOverrideStepReport;
 pub use planning_report::PlanningNexusGenerationBumpReport;
 pub use planning_report::PlanningNoopImageSourceSkipSledHostPhase2Reason;
+pub use planning_report::PlanningNoopImageSourceSkipSledMeasurementsReason;
 pub use planning_report::PlanningNoopImageSourceSkipSledZonesReason;
 pub use planning_report::PlanningNoopImageSourceSkipZoneReason;
 pub use planning_report::PlanningNoopImageSourceStepReport;
@@ -826,6 +829,8 @@ impl fmt::Display for BlueprintDisplay<'_> {
                 zones,
                 remove_mupdate_override,
                 host_phase_2,
+                // XXX FIXME
+                measurements: _,
             } = config;
 
             // Report the sled state
@@ -949,6 +954,7 @@ pub struct BlueprintSledConfig {
     pub zones: IdMap<BlueprintZoneConfig>,
     pub remove_mupdate_override: Option<MupdateOverrideUuid>,
     pub host_phase_2: BlueprintHostPhase2DesiredSlots,
+    pub measurements: BlueprintMeasurementsDesiredContents,
 }
 
 impl BlueprintSledConfig {
@@ -995,6 +1001,7 @@ impl BlueprintSledConfig {
                 .collect(),
             remove_mupdate_override: self.remove_mupdate_override,
             host_phase_2: self.host_phase_2.into(),
+            measurements: self.measurements.into(),
         }
     }
 
@@ -1362,6 +1369,120 @@ impl fmt::Display for BlueprintArtifactVersion {
             BlueprintArtifactVersion::Unknown => {
                 write!(f, "(unknown version)")
             }
+        }
+    }
+}
+
+#[derive(
+    Clone,
+    Debug,
+    PartialEq,
+    Eq,
+    Hash,
+    PartialOrd,
+    Ord,
+    JsonSchema,
+    Deserialize,
+    Serialize,
+    Diffable,
+)]
+pub struct BlueprintSingleMeasurement {
+    pub version: BlueprintArtifactVersion,
+    pub hash: ArtifactHash,
+}
+
+/// Where the measurement source is located
+///
+/// This is the blueprint version of [`XXX`].
+#[derive(
+    Clone,
+    Debug,
+    PartialEq,
+    Eq,
+    Hash,
+    PartialOrd,
+    Ord,
+    JsonSchema,
+    Deserialize,
+    Serialize,
+    Diffable,
+)]
+#[serde(tag = "type", rename_all = "snake_case")]
+pub enum BlueprintMeasurementSetDesiredContents {
+    /// This measurement source is whatever happens to be on the sled's
+    /// "install" dataset.
+    ///
+    /// This is whatever was put in place at the factory or by the latest
+    /// MUPdate. The image used here can vary by sled and even over time (if the
+    /// sled gets MUPdated again).
+    ///
+    /// Historically, this was the only source for zone images. In an system
+    /// with automated control-plane-driven update we expect to only use this
+    /// variant in emergencies where the system had to be recovered via MUPdate.
+    InstallDataset,
+
+    /// This measurement source source is the artifact matching this hash from the TUF
+    /// artifact store (aka "TUF repo depot").
+    ///
+    /// This originates from TUF repos uploaded to Nexus which are then
+    /// replicated out to all sleds.
+    #[serde(rename_all = "snake_case")]
+    Artifacts { artifacts: Vec<BlueprintSingleMeasurement> },
+}
+
+impl From<BlueprintMeasurementSetDesiredContents>
+    for OmicronMeasurementSetDesiredContents
+{
+    fn from(value: BlueprintMeasurementSetDesiredContents) -> Self {
+        match value {
+            BlueprintMeasurementSetDesiredContents::InstallDataset => {
+                Self::InstallDataset
+            }
+            BlueprintMeasurementSetDesiredContents::Artifacts {
+                artifacts,
+                ..
+            } => Self::Artifacts {
+                hashes: artifacts.into_iter().map(|x| x.hash).collect(),
+            },
+        }
+    }
+}
+
+impl fmt::Display for BlueprintMeasurementSetDesiredContents {
+    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
+        match self {
+            Self::InstallDataset => {
+                write!(f, "install dataset")
+            }
+            Self::Artifacts { artifacts } => {
+                for a in artifacts {
+                    write!(f, "artifact: {}", a.version)?;
+                }
+                Ok(())
+            }
+        }
+    }
+}
+#[derive(
+    Clone, Debug, Deserialize, Serialize, JsonSchema, PartialEq, Eq, Diffable,
+)]
+#[serde(rename_all = "snake_case")]
+pub struct BlueprintMeasurementsDesiredContents {
+    pub previous: BlueprintMeasurementSetDesiredContents,
+    pub current: BlueprintMeasurementSetDesiredContents,
+}
+
+impl From<BlueprintMeasurementsDesiredContents> for OmicronMeasurements {
+    fn from(value: BlueprintMeasurementsDesiredContents) -> Self {
+        Self { previous: value.previous.into(), current: value.current.into() }
+    }
+}
+
+impl BlueprintMeasurementsDesiredContents {
+    pub fn default_contents() -> Self {
+        Self {
+            previous: BlueprintMeasurementSetDesiredContents::InstallDataset,
+            current: BlueprintMeasurementSetDesiredContents::InstallDataset,
         }
     }
 }
