# nexus/types/src/deployment/planning_report.rs
@@ -217,6 +217,8 @@ pub struct PlanningNoopImageSourceConverted {
     pub num_dataset: usize,
     pub host_phase_2_slot_a_eligible: bool,
     pub host_phase_2_slot_b_eligible: bool,
+    pub measurement_previous_eligible: bool,
+    pub measurement_current_eligible: bool,
 }
 
 #[derive(
@@ -236,6 +238,9 @@ pub struct PlanningNoopImageSourceStepReport {
     pub skipped_zones:
         BTreeMap<OmicronZoneUuid, PlanningNoopImageSourceSkipZoneReason>,
     #[cfg_attr(test, any(((0, 16).into(), Default::default(), Default::default())))]
+    pub skipped_sled_measurements:
+        BTreeMap<SledUuid, PlanningNoopImageSourceSkipSledMeasurementsReason>,
+    #[cfg_attr(test, any(((0, 16).into(), Default::default(), Default::default())))]
     pub converted: BTreeMap<SledUuid, PlanningNoopImageSourceConverted>,
 }
 
@@ -246,6 +251,7 @@ impl PlanningNoopImageSourceStepReport {
             skipped_sled_zones: BTreeMap::new(),
             skipped_sled_host_phase_2: BTreeMap::new(),
             skipped_zones: BTreeMap::new(),
+            skipped_sled_measurements: BTreeMap::new(),
             converted: BTreeMap::new(),
         }
     }
@@ -255,6 +261,7 @@ impl PlanningNoopImageSourceStepReport {
             && self.skipped_sled_zones.is_empty()
             && self.skipped_sled_host_phase_2.is_empty()
             && self.skipped_zones.is_empty()
+            && self.skipped_sled_measurements.is_empty()
             && self.converted.is_empty()
     }
 
@@ -274,6 +281,14 @@ impl PlanningNoopImageSourceStepReport {
         self.skipped_sled_host_phase_2.insert(sled_id, reason);
     }
 
+    pub fn skip_sled_measurements(
+        &mut self,
+        sled_id: SledUuid,
+        reason: PlanningNoopImageSourceSkipSledMeasurementsReason,
+    ) {
+        self.skipped_sled_measurements.insert(sled_id, reason);
+    }
+
     pub fn skip_zone(
         &mut self,
         zone_id: OmicronZoneUuid,
@@ -289,6 +304,8 @@ impl PlanningNoopImageSourceStepReport {
         num_dataset: usize,
         host_phase_2_slot_a_eligible: bool,
         host_phase_2_slot_b_eligible: bool,
+        measurement_current_eligible: bool,
+        measurement_previous_eligible: bool,
     ) {
         self.converted.insert(
             sled_id,
@@ -297,6 +314,8 @@ impl PlanningNoopImageSourceStepReport {
                 num_dataset,
                 host_phase_2_slot_a_eligible,
                 host_phase_2_slot_b_eligible,
+                measurement_current_eligible,
+                measurement_previous_eligible,
             },
         );
     }
@@ -310,6 +329,7 @@ impl fmt::Display for PlanningNoopImageSourceStepReport {
             skipped_sled_host_phase_2,
             skipped_zones: _,
             converted,
+            skipped_sled_measurements,
         } = self;
 
         if *no_target_release {
@@ -331,7 +351,12 @@ impl fmt::Display for PlanningNoopImageSourceStepReport {
                 "* skipping noop host phase 2 desired contents check on sled {sled_id}: {reason}"
             )?;
         }
-
+        for (sled_id, reason) in skipped_sled_measurements.iter() {
+            writeln!(
+                f,
+                "* skipping noop measurement desired contents check on sled {sled_id}: {reason}"
+            )?;
+        }
         for (
             sled_id,
             PlanningNoopImageSourceConverted {
@@ -339,6 +364,8 @@ impl fmt::Display for PlanningNoopImageSourceStepReport {
                 num_dataset,
                 host_phase_2_slot_a_eligible,
                 host_phase_2_slot_b_eligible,
+                measurement_previous_eligible,
+                measurement_current_eligible,
             },
         ) in converted.iter()
         {
@@ -359,6 +386,18 @@ impl fmt::Display for PlanningNoopImageSourceStepReport {
                 writeln!(
                     f,
                     "* noop converting host phase 2 slot B to Artifact on sled {sled_id}"
+                )?;
+            }
+            if *measurement_previous_eligible {
+                writeln!(
+                    f,
+                    "* noop converting previous measurments to Artifact on sled {sled_id}"
+                )?;
+            }
+            if *measurement_current_eligible {
+                writeln!(
+                    f,
+                    "* noop converting current measurements to Artifact on sled {sled_id}"
                 )?;
             }
         }
@@ -420,6 +459,29 @@ impl fmt::Display for PlanningNoopImageSourceSkipSledHostPhase2Reason {
         match self {
             Self::BothSlotsAlreadyArtifact => {
                 write!(f, "both host phase 2 slots are already from artifacts")
+            }
+            Self::SledNotInInventory => {
+                write!(f, "sled not present in latest inventory collection")
+            }
+        }
+    }
+}
+
+#[derive(
+    Clone, Debug, Deserialize, Serialize, PartialEq, Eq, Diffable, JsonSchema,
+)]
+#[serde(rename_all = "snake_case", tag = "type")]
+#[cfg_attr(test, derive(test_strategy::Arbitrary))]
+pub enum PlanningNoopImageSourceSkipSledMeasurementsReason {
+    BothSlotsAlreadyArtifact,
+    SledNotInInventory,
+}
+
+impl fmt::Display for PlanningNoopImageSourceSkipSledMeasurementsReason {
+    fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
+        match self {
+            Self::BothSlotsAlreadyArtifact => {
+                write!(f, "both measurement sets are already from artifacts")
             }
             Self::SledNotInInventory => {
                 write!(f, "sled not present in latest inventory collection")
