# openapi/nexus-internal.json
@@ -1497,6 +1497,68 @@
           "slot_b"
         ]
       },
+      "BlueprintMeasurementSetDesiredContents": {
+        "description": "Where the measurement source is located\n\nThis is the blueprint version of [`XXX`].",
+        "oneOf": [
+          {
+            "description": "This measurement source is whatever happens to be on the sled's \"install\" dataset.\n\nThis is whatever was put in place at the factory or by the latest MUPdate. The image used here can vary by sled and even over time (if the sled gets MUPdated again).\n\nHistorically, this was the only source for zone images. In an system with automated control-plane-driven update we expect to only use this variant in emergencies where the system had to be recovered via MUPdate.",
+            "type": "object",
+            "properties": {
+              "type": {
+                "type": "string",
+                "enum": [
+                  "install_dataset"
+                ]
+              }
+            },
+            "required": [
+              "type"
+            ]
+          },
+          {
+            "description": "This measurement source source is the artifact matching this hash from the TUF artifact store (aka \"TUF repo depot\").\n\nThis originates from TUF repos uploaded to Nexus which are then replicated out to all sleds.",
+            "type": "object",
+            "properties": {
+              "hashes": {
+                "type": "array",
+                "items": {
+                  "type": "string",
+                  "format": "hex string (32 bytes)"
+                }
+              },
+              "type": {
+                "type": "string",
+                "enum": [
+                  "artifacts"
+                ]
+              },
+              "version": {
+                "$ref": "#/components/schemas/BlueprintArtifactVersion"
+              }
+            },
+            "required": [
+              "hashes",
+              "type",
+              "version"
+            ]
+          }
+        ]
+      },
+      "BlueprintMeasurementsDesiredContents": {
+        "type": "object",
+        "properties": {
+          "current": {
+            "$ref": "#/components/schemas/BlueprintMeasurementSetDesiredContents"
+          },
+          "previous": {
+            "$ref": "#/components/schemas/BlueprintMeasurementSetDesiredContents"
+          }
+        },
+        "required": [
+          "current",
+          "previous"
+        ]
+      },
       "BlueprintPhysicalDiskConfig": {
         "description": "Information about an Omicron physical disk as recorded in a bluerprint.",
         "type": "object",
@@ -1583,6 +1645,9 @@
           "host_phase_2": {
             "$ref": "#/components/schemas/BlueprintHostPhase2DesiredSlots"
           },
+          "measurements": {
+            "$ref": "#/components/schemas/BlueprintMeasurementsDesiredContents"
+          },
           "remove_mupdate_override": {
             "nullable": true,
             "allOf": [
@@ -1610,6 +1675,7 @@
           "datasets",
           "disks",
           "host_phase_2",
+          "measurements",
           "sled_agent_generation",
           "state",
           "zones"
